[gd_scene load_steps=41 format=2]

[ext_resource path="res://Enemy/GoblbinSmall.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Goblbin.gd" type="Script" id=3]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/GoblbinDetector.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/SmallShadow.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]
height = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 1978.36

[sub_resource type="Animation" id=21]
resource_name = "AttackDown"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0, 1, 0, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "MoveDown"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "AttackDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=27]
blend_point_0/node = SubResource( 23 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 24 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 25 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 26 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "MoveDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=10]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Attack/node = SubResource( 27 )
states/Attack/position = Vector2( 240, 152 )
states/Idle/node = SubResource( 18 )
states/Idle/position = Vector2( 331, 54 )
states/Move/node = SubResource( 10 )
states/Move/position = Vector2( 164, 54 )
transitions = [ "Move", "Idle", SubResource( 19 ), "Idle", "Move", SubResource( 20 ), "Move", "Attack", SubResource( 28 ), "Attack", "Move", SubResource( 29 ), "Idle", "Attack", SubResource( 30 ), "Attack", "Idle", SubResource( 31 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="CircleShape2D" id=22]
radius = 10.0499

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=32]
radius = 5.0
height = 14.0

[node name="Goblbin" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
MAX_SPEED = 70
ACCELERATION = 250

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1.69407e-21, -11.25 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 21 )
anims/IdleDown = SubResource( 13 )
anims/MoveDown = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Move/blend_position = Vector2( 0, 0 )

[node name="PlayerPunchZone" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerPunchZone" index="0"]
shape = SubResource( 22 )

[node name="HitboxPivot" type="Position2D" parent="."]
visible = false

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="GoblbinDetector" parent="." instance=ExtResource( 7 )]
visible = false

[node name="CollisionShape2D" parent="GoblbinDetector" index="0"]
position = Vector2( -1, -6 )
shape = SubResource( 32 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_zero" from="Stats" to="." method="_on_Stats_health_zero"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="PlayerPunchZone"]
[editable path="HitboxPivot/Hitbox"]
[editable path="GoblbinDetector"]
